--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^4.0.0-rc.5",
     "angular2-materialize": "^6.7.2",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
     "jquery": "^3.2.0",
     "materialize-css": "^0.98.0",
     "rxjs": "^5.1.0",
